Tests update and cleanup