@@ -29,8 +29,9 @@ import jdk.test.lib.Asserts;
  * @test
  * @summary Uninitialized inline fields test
  * @library /test/lib
- * @compile --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED Point.java JumboInline.java UninitializedInlineFieldsTest.java
- * @run main/othervm -XX:+EnableValhalla --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED -XX:InlineFieldMaxFlatSize=64 runtime.valhalla.inlinetypes.UninitializedInlineFieldsTest
+ * @modules java.base/jdk.internal.vm.annotation
+ * @compile Point.java JumboInline.java UninitializedInlineFieldsTest.java
+ * @run main/othervm -XX:+EnableValhalla -XX:InlineFieldMaxFlatSize=64 runtime.valhalla.inlinetypes.UninitializedInlineFieldsTest
  */
 public class UninitializedInlineFieldsTest {
     static Point nonFlattenableStaticPoint;
